--- a/index.scss
+++ b/index.scss
@@ -40,6 +40,42 @@ html {
     position: relative;
     background-color: transparent;
 }
+
+//curr weather
+
+.curr-weather-content {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 2rem;
+    text-align: center;
+    overflow-x: auto;
+    flex-wrap: wrap;
+    > div {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        min-width: 60px;
+        margin-bottom: 3rem;
+    }
+    
+}
+.city-wrap {
+    color: yellow;
+    margin-bottom: 3rem;
+    h1, h5 {
+        margin-bottom: 0;
+    }
+}
+.weather-data {
+    font-size: 2rem;
+}
+.curr-temp {
+    font-size: 3rem;
+} 
+.unit {
+    font-size: .8rem;
+}
+//table
 .table-wrap {
     overflow-x: auto;
 }
@@ -47,16 +83,17 @@ html {
     z-index: 1;
     color: #fff;
     text-align: center;
-    .icon {
-        display: block;
-    }
-    th, td {
+    th, td, thead th {
         vertical-align: middle;
     }
 }
 .result {
     padding: 4rem 2rem;
     position: relative;
+    h3 {
+        color: yellow;
+        margin-bottom: 3rem;;
+    }
 }
 
 .error {
