little js refactor + bckg img fixed

--- a/index.scss
+++ b/index.scss
@@ -15,7 +15,7 @@ html {
     background-image: url('https://i.giphy.com/media/3oEdvbelTmMXOQ9VDO/source.gif');
     background-position: center;
     background-repeat: no-repeat;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
